--- a/Swapi-APP-ANDROID/app/src/main/res/values/strings.xml
+++ b/Swapi-APP-ANDROID/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Swapi</string>
-
     <string name="anuncios_title">Announcements</string>
     <string name="home_title">Home</string>
     <string name="rentas_title">Rentals</string>
@@ -12,7 +11,6 @@
     <string name="tab_home">Home</string>
     <string name="tab_servicios">Services</string>
     <string name="tab_anuncios">Announcements</string>
-
     <string name="login_logo_cd">Application logo</string>
     <string name="login_email_label">Email</string>
     <string name="login_password_label">Password</string>
@@ -22,7 +20,6 @@
     <string name="login_face_id_button">Face ID</string>
     <string name="login_face_id_cd">Login with Face ID</string>
     <string name="login_signup_prompt">Don\'t have an account? Sign up here</string>
-
     <string name="onboarding_previous_button">Previous</string>
     <string name="onboarding_next_button">Next</string>
     <string name="onboarding_start_button">Start</string>
@@ -33,31 +30,25 @@
     <string name="onboarding_page2_desc">A trustworthy space just for students and faculty.</string>
     <string name="onboarding_page3_title">Boost Your Community</string>
     <string name="onboarding_page3_desc">Support your classmates, discover opportunities, and stay up to date with ads.</string>
-
     <string name="common_back_button_cd">Back</string>
     <string name="common_continue">Continue</string>
-
     <string name="login_title">Welcome Back</string>
     <string name="login_subtitle">Login to your Swapi account</string>
     <string name="login_forgot_password">Forgot your password?</string>
     <string name="login_divider_or">or</string>
     <string name="login_create_account">Create a new account</string>
-
     <string name="signup_email_title">What\'s your email?</string>
     <string name="signup_email_subtitle">We\'ll send a verification code to this email.</string>
-
     <string name="signup_code_title">Enter Code</string>
     <string name="signup_code_subtitle">We sent a 6-digit code to %1$s</string>
     <string name="signup_code_label">Verification Code</string>
     <string name="signup_code_button">Verify</string>
-
     <string name="signup_profile_title">Create your Profile</string>
     <string name="signup_profile_subtitle">You are registering with the email: %1$s</string>
     <string name="signup_profile_name_label">Full Name</string>
     <string name="signup_profile_phone_label">Phone Number</string>
     <string name="signup_profile_confirm_password_label">Confirm Password</string>
     <string name="signup_profile_button">Sign Up</string>
-
     <string name="sales_fab_add_cd">Add Sale</string>
     <string name="sales_loading_text">Loading products...</string>
     <string name="sales_error_title">Oops... Something went wrong</string>
@@ -67,5 +58,60 @@
     <string name="sales_search_placeholder">Search products...</string>
     <string name="sales_search_icon_cd">Search</string>
     <string name="sales_card_details_cd">View details</string>
+
+    <string name="home_bienvenida">Welcome, %1$s</string>
+    <string name="home_ver_mas">See more</string>
+    <string name="home_card_avatar_cd">Avatar for %1$s</string>
+    <string name="home_buscar_placeholder">Search in Swapi...</string>
+    <string name="home_buscar_limpiar">Clear search</string>
+    <string name="home_buscar_cerrar">Close search</string>
+    <string name="home_buscar_accion">Search</string>
+
+    <string name="detail_titulo">Detail</string>
+    <string name="detail_guardar">Save</string>
+    <string name="detail_descripcion">Description</string>
+    <string name="detail_avatar_vendedor_cd">Seller avatar</string>
+    <string name="detail_vendedor_verificado">Verified seller</string>
+    <string name="detail_boton_whatsapp">Contact via WhatsApp</string>
+    <string name="detail_toast_no_numero">The seller did not provide a number.</string>
+    <string name="detail_whatsapp_mensaje">Hello, I\'m interested in your product \'%1$s\' that I saw on Swapi.</string>
+    <string name="detail_toast_no_whatsapp">Could not open WhatsApp.</string>
+
+    <string name="profile_titulo">My Swapi Profile</string>
+    <string name="profile_mis_publicaciones">My posts</string>
+    <string name="profile_mis_publicaciones_sub">Manage all your ads</string>
+    <string name="profile_historial">Activity history</string>
+    <string name="profile_historial_sub">Past sales, rentals, and services</string>
+    <string name="profile_editar">Edit public profile</string>
+    <string name="profile_seguridad">Account security</string>
+    <string name="profile_seguridad_sub">Verify your institutional email</string>
+    <string name="profile_cerrar_sesion">Logout</string>
+    <string name="profile_toast_ir_a">Go to %1$s</string>
+    <string name="profile_guardados">Saved</string>
+    <string name="profile_mensajes">Messages</string>
+    <string name="profile_calificaciones">Ratings</string>
+    <string name="profile_ayuda">Help</string>
+    <string name="profile_seccion_actividad">My Activity</string>
+    <string name="profile_seccion_cuenta">Account &amp; Support</string>
+    <string name="profile_foto_cd">Profile picture</string>
+    <string name="profile_ver_publico">View my public profile</string>
+
+    <string name="new_pub_titulo">Create Post</string>
+    <string name="new_pub_titulo_label">Title</string>
+    <string name="new_pub_descripcion_label">Description</string>
+    <string name="new_pub_precio_label">Price</string>
+    <string name="new_pub_categoria_label">Category</string>
+    <string name="new_pub_categoria_info">Information</string>
+    <string name="new_pub_imagen_cd">Upload image</string>
+    <string name="new_pub_imagen_seleccionada_cd">Selected image</string>
+    <string name="new_pub_boton_seleccionar_img">Select Image</string>
+    <string name="new_pub_boton_cambiar_img">Change Image</string>
+    <string name="new_pub_boton_publicar">Publish</string>
+
+    <string name="saved_cargando">Loading saved items...</string>
+    <string name="saved_error_titulo">Oops... Couldn\'t load your saved items</string>
+    <string name="saved_titulo">Saved</string>
+    <string name="saved_subtitulo">Your saved posts</string>
+    <string name="saved_buscar_placeholder">Search in saved...</string>
 
 </resources>
